--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
+    "ag-grid-enterprise": "^32.1.0",
     "ag-grid-react": "^32.1.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
